// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitterName renders when submitter is Legal Officer 1`] = `
<LegalOfficerName
  address={
    ValidAccountId {
      "anyAccountId": AnyAccountId {
        "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
        "type": "Polkadot",
      },
    }
  }
/>
`;

exports[`SubmitterName renders when submitter is Requester 1`] = `
<Cell
  content={
    <div>
      John Doe
    </div>
  }
/>
`;

exports[`SubmitterName renders when submitter is verified issuer 1`] = `
<Cell
  content={
    <div>
      Scott Tiger
      <IssuerBadge />
    </div>
  }
/>
`;
